// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawerMenu /> should render properly - embiggened 1`] = `
.c3 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 29px;
  height: 100%;
  overflow: hidden;
  -webkit-transition: width 0.3s ease-out;
  transition: width 0.3s ease-out;
}

.c1 {
  height: 100%;
  margin-right: 10px;
  border-right: 1px solid #0A7BC2;
}

.c1 svg {
  color: #0A7BC2;
}

.c2 {
  position: relative;
  display: block;
  right: -9px;
  top: calc(50% - 12px);
  background-color: #FFF;
  cursor: pointer;
}

.c2 svg {
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

.c4 {
  position: relative;
  grid-column: 2;
  grid-row: 1 / 3;
  display: grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr;
  width: 70px;
  height: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
}

.c4 svg {
  color: #7D7D7D;
}

.c4 .c5:hover svg {
  color: #0A7BC2;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c7 svg {
  color: #0A7BC2;
}

.c7:hover svg {
  color: #7D7D7D;
}

<Toggle(DrawerMenu)
  isEmbiggened={true}
  onDrawerMenuIconClick={[MockFunction]}
  onEmbiggenClick={[MockFunction]}
  permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
  postId={1829613594}
>
  <ClickOutside(DrawerMenu)
    close={[Function]}
    handleClickOutside={[Function]}
    isEmbiggened={true}
    isOpen={false}
    onDrawerMenuIconClick={[MockFunction]}
    onEmbiggenClick={[MockFunction]}
    permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
    postId={1829613594}
    toggle={[Function]}
  >
    <DrawerMenu
      close={[Function]}
      insideReference={[Function]}
      isEmbiggened={true}
      isOpen={false}
      onDrawerMenuIconClick={[MockFunction]}
      onEmbiggenClick={[MockFunction]}
      permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
      postId={1829613594}
      toggle={[Function]}
    >
      <EnsureDefaultTheme>
        <ThemeProvider
          theme={[Function]}
        >
          <DrawerMenu__Container
            isOpen={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "DrawerMenu__Container-sc-2e7tov-0",
                    "isStatic": false,
                    "lastClassName": "c0",
                    "rules": Array [
                      "display:flex;width:29px;height:100%;overflow:hidden;transition:width 0.3s ease-out;",
                      [Function],
                    ],
                  },
                  "displayName": "DrawerMenu__Container",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "DrawerMenu__Container-sc-2e7tov-0",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
              isOpen={false}
            >
              <div
                className="c0"
              >
                <DrawerMenu__SwipeIconContainer
                  isEmbiggened={true}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "DrawerMenu__SwipeIconContainer-sc-2e7tov-1",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "height:100%;margin-right:10px;border-right:1px solid ",
                            [Function],
                            ";svg{color:",
                            [Function],
                            ";}",
                          ],
                        },
                        "displayName": "DrawerMenu__SwipeIconContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "DrawerMenu__SwipeIconContainer-sc-2e7tov-1",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    isEmbiggened={true}
                  >
                    <div
                      className="c1"
                    >
                      <DrawerMenu__SwipeIcon
                        isOpen={false}
                      >
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "DrawerMenu__SwipeIcon-sc-2e7tov-2",
                                "isStatic": false,
                                "lastClassName": "c2",
                                "rules": Array [
                                  "position:relative;display:block;right:-9px;top:calc(50% - 12px);background-color:",
                                  [Function],
                                  ";cursor:pointer;svg{transition:all 0.3s ease-out;}",
                                  [Function],
                                ],
                              },
                              "displayName": "DrawerMenu__SwipeIcon",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "DrawerMenu__SwipeIcon-sc-2e7tov-2",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          isOpen={false}
                        >
                          <div
                            className="c2"
                          >
                            <ChevronLeftIcon
                              onClick={[Function]}
                            >
                              <Icon19
                                onClick={[Function]}
                              >
                                <icon19__IconWrapper
                                  onClick={[Function]}
                                >
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "icon19__IconWrapper-iyvn34-0",
                                          "isStatic": true,
                                          "lastClassName": "c3",
                                          "rules": Array [
                                            "fill:currentColor;display:flex;",
                                          ],
                                        },
                                        "displayName": "icon19__IconWrapper",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                        "target": "span",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    onClick={[Function]}
                                  >
                                    <span
                                      className="c3"
                                      onClick={[Function]}
                                    >
                                      <ChevronLeft
                                        aria-label="ChevronLeft icon"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <svg
                                          aria-label="ChevronLeft icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M11.84 3.87a.5.5 0 1 0-.68-.74l-6 5.5a.5.5 0 0 0 0 .74l6 5.5a.5.5 0 1 0 .68-.74L6.24 9l5.6-5.13z"
                                            fillRule="evenodd"
                                          />
                                        </svg>
                                      </ChevronLeft>
                                    </span>
                                  </StyledComponent>
                                </icon19__IconWrapper>
                              </Icon19>
                            </ChevronLeftIcon>
                          </div>
                        </StyledComponent>
                      </DrawerMenu__SwipeIcon>
                    </div>
                  </StyledComponent>
                </DrawerMenu__SwipeIconContainer>
                <DrawerMenu__IconContainer>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "DrawerMenu__IconContainer-sc-2e7tov-3",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "position:relative;grid-column:2;grid-row:1 / 3;display:grid;grid-template-rows:1fr 1fr;grid-template-columns:1fr;width:70px;height:100%;",
                            ".c5",
                            "{display:flex;justify-content:center;align-items:center;}> svg{align-self:center;justify-self:center;}svg{color:",
                            [Function],
                            ";}",
                            ".c5",
                            ":hover{svg{color:",
                            [Function],
                            ";}}",
                          ],
                        },
                        "displayName": "DrawerMenu__IconContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "DrawerMenu__IconContainer-sc-2e7tov-3",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c4"
                    >
                      <Link
                        data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                        href="http://kinja.com/write/1829613594"
                      >
                        <link__Anchor
                          className="js_link"
                          dangerouslySetInnerHTML={null}
                          data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                          href="http://kinja.com/write/1829613594"
                        >
                          <StyledComponent
                            className="js_link"
                            dangerouslySetInnerHTML={null}
                            data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "c5",
                                  "isStatic": true,
                                  "lastClassName": "c6",
                                  "rules": Array [
                                    "text-decoration:none;",
                                  ],
                                },
                                "displayName": "link__Anchor",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "c5",
                                "target": "a",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            href="http://kinja.com/write/1829613594"
                          >
                            <a
                              className="js_link c5 c6"
                              dangerouslySetInnerHTML={null}
                              data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                              href="http://kinja.com/write/1829613594"
                            >
                              <WriteIcon>
                                <Icon19>
                                  <icon19__IconWrapper>
                                    <StyledComponent
                                      forwardedComponent={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": Array [],
                                          "componentStyle": ComponentStyle {
                                            "componentId": "icon19__IconWrapper-iyvn34-0",
                                            "isStatic": true,
                                            "lastClassName": "c3",
                                            "rules": Array [
                                              "fill:currentColor;display:flex;",
                                            ],
                                          },
                                          "displayName": "icon19__IconWrapper",
                                          "foldedComponentIds": Array [],
                                          "render": [Function],
                                          "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                          "target": "span",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                    >
                                      <span
                                        className="c3"
                                      >
                                        <Write
                                          aria-label="Write icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <svg
                                            aria-label="Write icon"
                                            height="18"
                                            viewBox="0 0 18 18"
                                            width="18"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M14.7 1.39l1.91 1.92c.52.51.52 1.35 0 1.87l-9.77 9.8c-.1.1-.32.2-2.02 1.02l-.03.02a567.4 567.4 0 0 1-1.92.9c-.16.08-.31.09-.76.08a17.86 17.86 0 0 1-.57-.02.5.5 0 0 1-.47-.41 4.45 4.45 0 0 1-.07-.7c0-.28.02-.5.11-.7a546.56 546.56 0 0 1 .91-1.92l.02-.03c.81-1.71.92-1.93 1.02-2.03l9.77-9.8a1.32 1.32 0 0 1 1.87 0zM16.5 8c.27 0 .5.22.5.5v8a.5.5 0 0 1-.5.5h-8a.5.5 0 1 1 0-1H16V8.5c0-.28.22-.5.5-.5zm-2.96-5.9l-9.78 9.8c.06-.06-.15.36-.2.47l-.62 1.28-.01.03a569.36 569.36 0 0 0-.91 1.91A2.8 2.8 0 0 0 2 16h.12c.14.01.38 0 .31.03a542.86 542.86 0 0 0 1.92-.9l.03-.02 1.27-.62c.11-.05.52-.26.47-.2l9.78-9.8a.33.33 0 0 0 0-.47L13.99 2.1a.32.32 0 0 0-.45 0zM9.5 1a.5.5 0 0 1 0 1H2v7.5a.5.5 0 0 1-1 0v-8c0-.28.22-.5.5-.5h8z"
                                              fillRule="evenodd"
                                            />
                                          </svg>
                                        </Write>
                                      </span>
                                    </StyledComponent>
                                  </icon19__IconWrapper>
                                </Icon19>
                              </WriteIcon>
                            </a>
                          </StyledComponent>
                        </link__Anchor>
                      </Link>
                      <DrawerMenu__EmbiggenIconContainer
                        isEmbiggened={true}
                        onClick={[Function]}
                      >
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "DrawerMenu__EmbiggenIconContainer-sc-2e7tov-4",
                                "isStatic": false,
                                "lastClassName": "c7",
                                "rules": Array [
                                  "display:flex;justify-content:center;align-items:center;cursor:pointer;svg{color:",
                                  [Function],
                                  ";}&:hover{svg{color:",
                                  [Function],
                                  ";}}",
                                ],
                              },
                              "displayName": "DrawerMenu__EmbiggenIconContainer",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "DrawerMenu__EmbiggenIconContainer-sc-2e7tov-4",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          isEmbiggened={true}
                          onClick={[Function]}
                        >
                          <div
                            className="c7"
                            onClick={[Function]}
                          >
                            <EmbiggenFilledIcon>
                              <Icon19>
                                <icon19__IconWrapper>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "icon19__IconWrapper-iyvn34-0",
                                          "isStatic": true,
                                          "lastClassName": "c3",
                                          "rules": Array [
                                            "fill:currentColor;display:flex;",
                                          ],
                                        },
                                        "displayName": "icon19__IconWrapper",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                        "target": "span",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <span
                                      className="c3"
                                    >
                                      <EmbiggenFilled
                                        aria-label="EmbiggenFilled icon"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <svg
                                          aria-label="EmbiggenFilled icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M17 1a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h16zm-2.5 8a.5.5 0 0 0-.5.5V13h-3.5a.5.5 0 1 0 0 1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5zm-7-5h-4a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 1 0V5h3.5a.5.5 0 0 0 0-1z"
                                            fillRule="evenodd"
                                          />
                                        </svg>
                                      </EmbiggenFilled>
                                    </span>
                                  </StyledComponent>
                                </icon19__IconWrapper>
                              </Icon19>
                            </EmbiggenFilledIcon>
                          </div>
                        </StyledComponent>
                      </DrawerMenu__EmbiggenIconContainer>
                    </div>
                  </StyledComponent>
                </DrawerMenu__IconContainer>
              </div>
            </StyledComponent>
          </DrawerMenu__Container>
        </ThemeProvider>
      </EnsureDefaultTheme>
    </DrawerMenu>
  </ClickOutside(DrawerMenu)>
</Toggle(DrawerMenu)>
`;

exports[`<DrawerMenu /> should render properly 1`] = `
.c3 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 29px;
  height: 100%;
  overflow: hidden;
  -webkit-transition: width 0.3s ease-out;
  transition: width 0.3s ease-out;
}

.c1 {
  height: 100%;
  margin-right: 10px;
  border-right: 1px solid #E5E5E5;
}

.c1 svg {
  color: #0A7BC2;
}

.c2 {
  position: relative;
  display: block;
  right: -9px;
  top: calc(50% - 12px);
  background-color: #FFF;
  cursor: pointer;
}

.c2 svg {
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

.c4 {
  position: relative;
  grid-column: 2;
  grid-row: 1 / 3;
  display: grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr;
  width: 70px;
  height: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: center;
}

.c4 svg {
  color: #7D7D7D;
}

.c4 .c5:hover svg {
  color: #0A7BC2;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c7 svg {
  color: #7D7D7D;
}

.c7:hover svg {
  color: #0A7BC2;
}

<Toggle(DrawerMenu)
  onDrawerMenuIconClick={[MockFunction]}
  onEmbiggenClick={[MockFunction]}
  permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
  postId={1829613594}
>
  <ClickOutside(DrawerMenu)
    close={[Function]}
    handleClickOutside={[Function]}
    isOpen={false}
    onDrawerMenuIconClick={[MockFunction]}
    onEmbiggenClick={[MockFunction]}
    permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
    postId={1829613594}
    toggle={[Function]}
  >
    <DrawerMenu
      close={[Function]}
      insideReference={[Function]}
      isOpen={false}
      onDrawerMenuIconClick={[MockFunction]}
      onEmbiggenClick={[MockFunction]}
      permalink="https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547"
      postId={1829613594}
      toggle={[Function]}
    >
      <EnsureDefaultTheme>
        <ThemeProvider
          theme={[Function]}
        >
          <DrawerMenu__Container
            isOpen={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "DrawerMenu__Container-sc-2e7tov-0",
                    "isStatic": false,
                    "lastClassName": "c0",
                    "rules": Array [
                      "display:flex;width:29px;height:100%;overflow:hidden;transition:width 0.3s ease-out;",
                      [Function],
                    ],
                  },
                  "displayName": "DrawerMenu__Container",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "DrawerMenu__Container-sc-2e7tov-0",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
              isOpen={false}
            >
              <div
                className="c0"
              >
                <DrawerMenu__SwipeIconContainer>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "DrawerMenu__SwipeIconContainer-sc-2e7tov-1",
                          "isStatic": false,
                          "lastClassName": "c1",
                          "rules": Array [
                            "height:100%;margin-right:10px;border-right:1px solid ",
                            [Function],
                            ";svg{color:",
                            [Function],
                            ";}",
                          ],
                        },
                        "displayName": "DrawerMenu__SwipeIconContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "DrawerMenu__SwipeIconContainer-sc-2e7tov-1",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c1"
                    >
                      <DrawerMenu__SwipeIcon
                        isOpen={false}
                      >
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "DrawerMenu__SwipeIcon-sc-2e7tov-2",
                                "isStatic": false,
                                "lastClassName": "c2",
                                "rules": Array [
                                  "position:relative;display:block;right:-9px;top:calc(50% - 12px);background-color:",
                                  [Function],
                                  ";cursor:pointer;svg{transition:all 0.3s ease-out;}",
                                  [Function],
                                ],
                              },
                              "displayName": "DrawerMenu__SwipeIcon",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "DrawerMenu__SwipeIcon-sc-2e7tov-2",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          isOpen={false}
                        >
                          <div
                            className="c2"
                          >
                            <ChevronLeftIcon
                              onClick={[Function]}
                            >
                              <Icon19
                                onClick={[Function]}
                              >
                                <icon19__IconWrapper
                                  onClick={[Function]}
                                >
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "icon19__IconWrapper-iyvn34-0",
                                          "isStatic": true,
                                          "lastClassName": "c3",
                                          "rules": Array [
                                            "fill:currentColor;display:flex;",
                                          ],
                                        },
                                        "displayName": "icon19__IconWrapper",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                        "target": "span",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    onClick={[Function]}
                                  >
                                    <span
                                      className="c3"
                                      onClick={[Function]}
                                    >
                                      <ChevronLeft
                                        aria-label="ChevronLeft icon"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <svg
                                          aria-label="ChevronLeft icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M11.84 3.87a.5.5 0 1 0-.68-.74l-6 5.5a.5.5 0 0 0 0 .74l6 5.5a.5.5 0 1 0 .68-.74L6.24 9l5.6-5.13z"
                                            fillRule="evenodd"
                                          />
                                        </svg>
                                      </ChevronLeft>
                                    </span>
                                  </StyledComponent>
                                </icon19__IconWrapper>
                              </Icon19>
                            </ChevronLeftIcon>
                          </div>
                        </StyledComponent>
                      </DrawerMenu__SwipeIcon>
                    </div>
                  </StyledComponent>
                </DrawerMenu__SwipeIconContainer>
                <DrawerMenu__IconContainer>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "DrawerMenu__IconContainer-sc-2e7tov-3",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "position:relative;grid-column:2;grid-row:1 / 3;display:grid;grid-template-rows:1fr 1fr;grid-template-columns:1fr;width:70px;height:100%;",
                            ".c5",
                            "{display:flex;justify-content:center;align-items:center;}> svg{align-self:center;justify-self:center;}svg{color:",
                            [Function],
                            ";}",
                            ".c5",
                            ":hover{svg{color:",
                            [Function],
                            ";}}",
                          ],
                        },
                        "displayName": "DrawerMenu__IconContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "DrawerMenu__IconContainer-sc-2e7tov-3",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c4"
                    >
                      <Link
                        data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                        href="http://kinja.com/write/1829613594"
                      >
                        <link__Anchor
                          className="js_link"
                          dangerouslySetInnerHTML={null}
                          data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                          href="http://kinja.com/write/1829613594"
                        >
                          <StyledComponent
                            className="js_link"
                            dangerouslySetInnerHTML={null}
                            data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "c5",
                                  "isStatic": true,
                                  "lastClassName": "c6",
                                  "rules": Array [
                                    "text-decoration:none;",
                                  ],
                                },
                                "displayName": "link__Anchor",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "c5",
                                "target": "a",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            href="http://kinja.com/write/1829613594"
                          >
                            <a
                              className="js_link c5 c6"
                              dangerouslySetInnerHTML={null}
                              data-ga="[[\\"Manage page click\\", \\"Posts - Edit post click\\", \\"https://earther.gizmodo.com/new-house-science-committee-chair-to-climate-scientists-1830999547\\"]]"
                              href="http://kinja.com/write/1829613594"
                            >
                              <WriteIcon>
                                <Icon19>
                                  <icon19__IconWrapper>
                                    <StyledComponent
                                      forwardedComponent={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": Array [],
                                          "componentStyle": ComponentStyle {
                                            "componentId": "icon19__IconWrapper-iyvn34-0",
                                            "isStatic": true,
                                            "lastClassName": "c3",
                                            "rules": Array [
                                              "fill:currentColor;display:flex;",
                                            ],
                                          },
                                          "displayName": "icon19__IconWrapper",
                                          "foldedComponentIds": Array [],
                                          "render": [Function],
                                          "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                          "target": "span",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                    >
                                      <span
                                        className="c3"
                                      >
                                        <Write
                                          aria-label="Write icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <svg
                                            aria-label="Write icon"
                                            height="18"
                                            viewBox="0 0 18 18"
                                            width="18"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M14.7 1.39l1.91 1.92c.52.51.52 1.35 0 1.87l-9.77 9.8c-.1.1-.32.2-2.02 1.02l-.03.02a567.4 567.4 0 0 1-1.92.9c-.16.08-.31.09-.76.08a17.86 17.86 0 0 1-.57-.02.5.5 0 0 1-.47-.41 4.45 4.45 0 0 1-.07-.7c0-.28.02-.5.11-.7a546.56 546.56 0 0 1 .91-1.92l.02-.03c.81-1.71.92-1.93 1.02-2.03l9.77-9.8a1.32 1.32 0 0 1 1.87 0zM16.5 8c.27 0 .5.22.5.5v8a.5.5 0 0 1-.5.5h-8a.5.5 0 1 1 0-1H16V8.5c0-.28.22-.5.5-.5zm-2.96-5.9l-9.78 9.8c.06-.06-.15.36-.2.47l-.62 1.28-.01.03a569.36 569.36 0 0 0-.91 1.91A2.8 2.8 0 0 0 2 16h.12c.14.01.38 0 .31.03a542.86 542.86 0 0 0 1.92-.9l.03-.02 1.27-.62c.11-.05.52-.26.47-.2l9.78-9.8a.33.33 0 0 0 0-.47L13.99 2.1a.32.32 0 0 0-.45 0zM9.5 1a.5.5 0 0 1 0 1H2v7.5a.5.5 0 0 1-1 0v-8c0-.28.22-.5.5-.5h8z"
                                              fillRule="evenodd"
                                            />
                                          </svg>
                                        </Write>
                                      </span>
                                    </StyledComponent>
                                  </icon19__IconWrapper>
                                </Icon19>
                              </WriteIcon>
                            </a>
                          </StyledComponent>
                        </link__Anchor>
                      </Link>
                      <DrawerMenu__EmbiggenIconContainer
                        onClick={[Function]}
                      >
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "DrawerMenu__EmbiggenIconContainer-sc-2e7tov-4",
                                "isStatic": false,
                                "lastClassName": "c7",
                                "rules": Array [
                                  "display:flex;justify-content:center;align-items:center;cursor:pointer;svg{color:",
                                  [Function],
                                  ";}&:hover{svg{color:",
                                  [Function],
                                  ";}}",
                                ],
                              },
                              "displayName": "DrawerMenu__EmbiggenIconContainer",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "DrawerMenu__EmbiggenIconContainer-sc-2e7tov-4",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          onClick={[Function]}
                        >
                          <div
                            className="c7"
                            onClick={[Function]}
                          >
                            <EmbiggenIcon>
                              <Icon19>
                                <icon19__IconWrapper>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "icon19__IconWrapper-iyvn34-0",
                                          "isStatic": true,
                                          "lastClassName": "c3",
                                          "rules": Array [
                                            "fill:currentColor;display:flex;",
                                          ],
                                        },
                                        "displayName": "icon19__IconWrapper",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "icon19__IconWrapper-iyvn34-0",
                                        "target": "span",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <span
                                      className="c3"
                                    >
                                      <Embiggen
                                        aria-label="Embiggen icon"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <svg
                                          aria-label="Embiggen icon"
                                          height="18"
                                          viewBox="0 0 18 18"
                                          width="18"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M16.5 1c.83 0 1.5.67 1.5 1.5v13c0 .82-.68 1.5-1.5 1.5h-15A1.5 1.5 0 0 1 0 15.5v-13C0 1.69.68 1 1.5 1h15zm0 1h-15a.5.5 0 0 0-.5.5v13c0 .27.22.5.5.5h15a.5.5 0 0 0 .5-.5v-13a.5.5 0 0 0-.5-.5zm-2 7c.28 0 .5.22.5.5v4a.5.5 0 0 1-.5.5h-4a.5.5 0 1 1 0-1H14V9.5c0-.28.22-.5.5-.5zm-7-5a.5.5 0 0 1 0 1H4v3.5a.5.5 0 0 1-1 0v-4c0-.28.22-.5.5-.5z"
                                            fillRule="evenodd"
                                          />
                                        </svg>
                                      </Embiggen>
                                    </span>
                                  </StyledComponent>
                                </icon19__IconWrapper>
                              </Icon19>
                            </EmbiggenIcon>
                          </div>
                        </StyledComponent>
                      </DrawerMenu__EmbiggenIconContainer>
                    </div>
                  </StyledComponent>
                </DrawerMenu__IconContainer>
              </div>
            </StyledComponent>
          </DrawerMenu__Container>
        </ThemeProvider>
      </EnsureDefaultTheme>
    </DrawerMenu>
  </ClickOutside(DrawerMenu)>
</Toggle(DrawerMenu)>
`;
